--- a/hp/fail-on-non-static-range-in-back/_modules/gstaichi/lang/ast/ast_transformer_utils.html
+++ b/hp/fail-on-non-static-range-in-back/_modules/gstaichi/lang/ast/ast_transformer_utils.html
@@ -690,6 +690,10 @@
 <a class="viewcode-back" href="../../../../autoapi/gstaichi/lang/ast/ast_transformer_utils/index.html#gstaichi.lang.ast.ast_transformer_utils.ASTTransformerContext.autodiff_mode">[docs]</a>
         <span class="bp">self</span><span class="o">.</span><span class="n">autodiff_mode</span> <span class="o">=</span> <span class="n">autodiff_mode</span></div>
 
+<div class="viewcode-block" id="ASTTransformerContext.loop_depth">
+<a class="viewcode-back" href="../../../../autoapi/gstaichi/lang/ast/ast_transformer_utils/index.html#gstaichi.lang.ast.ast_transformer_utils.ASTTransformerContext.loop_depth">[docs]</a>
+        <span class="bp">self</span><span class="o">.</span><span class="n">loop_depth</span><span class="p">:</span> <span class="nb">int</span> <span class="o">=</span> <span class="mi">0</span></div>
+
 
     <span class="c1"># e.g.: FunctionDef, Module, Global</span>
 <div class="viewcode-block" id="ASTTransformerContext.variable_scope_guard">
