--- a/hp/fail-on-non-static-range-in-back/genindex.html
+++ b/hp/fail-on-non-static-range-in-back/genindex.html
@@ -1748,10 +1748,10 @@
       </ul></li>
       <li><a href="autoapi/gstaichi/linalg/matrixfree_cg/index.html#gstaichi.linalg.matrixfree_cg.LinearOperator">LinearOperator (class in gstaichi.linalg.matrixfree_cg)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="autoapi/gstaichi/lang/ast/ast_transformer_utils/index.html#gstaichi.lang.ast.ast_transformer_utils.ASTTransformerContext.lineno_offset">lineno_offset (gstaichi.lang.ast.ast_transformer_utils.ASTTransformerContext attribute)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="autoapi/gstaichi/lang/mesh/index.html#gstaichi.lang.mesh.Mesh.load_meta">load_meta() (gstaichi.lang.mesh.Mesh static method)</a>
 </li>
       <li><a href="autoapi/gstaichi/lang/ast/ast_transformer_utils/index.html#gstaichi.lang.ast.ast_transformer_utils.ASTTransformerContext.local_scopes">local_scopes (gstaichi.lang.ast.ast_transformer_utils.ASTTransformerContext attribute)</a>
@@ -1763,6 +1763,8 @@
       <li><a href="autoapi/gstaichi/lang/ast/ast_transformer_utils/index.html#gstaichi.lang.ast.ast_transformer_utils.NonStaticIfGuard.loop_attribute">loop_attribute (gstaichi.lang.ast.ast_transformer_utils.NonStaticIfGuard attribute)</a>
 </li>
       <li><a href="autoapi/gstaichi/lang/misc/index.html#gstaichi.lang.misc.loop_config">loop_config() (in module gstaichi.lang.misc)</a>
+</li>
+      <li><a href="autoapi/gstaichi/lang/ast/ast_transformer_utils/index.html#gstaichi.lang.ast.ast_transformer_utils.ASTTransformerContext.loop_depth">loop_depth (gstaichi.lang.ast.ast_transformer_utils.ASTTransformerContext attribute)</a>
 </li>
       <li><a href="autoapi/gstaichi/lang/ast/ast_transformer_utils/index.html#gstaichi.lang.ast.ast_transformer_utils.ASTTransformerContext.loop_scope_guard">loop_scope_guard() (gstaichi.lang.ast.ast_transformer_utils.ASTTransformerContext method)</a>
 </li>
